# digit-recognition-as-service

./: .gitignore  Dockerfile.serve  Dockerfile.train  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: balanced.yaml  knn.yaml  logreg.yaml  mlp.yaml  mnist_logreg.yaml  mnist_svm.yaml  overfit.yaml  rf.yaml  underfit.yaml
load/: locustfile.py
report/: build_midsem_report.py  build_ppt.py  build_report.py
reports/: proof_table.md
src/mlops_digit/: __init__.py  analyze.py  benchmark.py  data.py  experiment.py  models.py  monitor.py  selector.py  serve.py  train.py
tests/: test_data.py  test_models.py  test_monitor.py  test_selector.py  test_serve.py
